добавила хендлеры для /auth
